# PresenceBot

./: .env.dev  Cargo.toml  THIRDPARTY.json
src/: main.rs
src/commands/: add_regex_rule.rs  add_word_rule.rs  list.rs  mod.rs  set_slowmode.rs  setup.rs  welcome.rs
src/messages/: block.rs
src/mongo/: mod.rs  mongo_repo.rs  scanner.rs  servers_settings.rs
src/regex/: tests.rs
src/scanners/: general.rs  mod.rs  punishments.rs  regex.rs  tests.rs  word.rs
src/utils/: command_parser.rs  mod.rs  paging.rs  punisher.rs  send_log.rs
